--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -747,12 +747,12 @@ TODO: relativ simplu, transmite doar un fisier nu si chei de criptare
 TODO: protocolul folosit de bootloader-flasher (diagrame de mesaje)
 TODO: vezi emailuri + notitele din caiet
 
-\section{Architectura și codul bootloader-ului}
+\section{Arhitectura și codul bootloader-ului}
+TODO: arhitectura bootloader-ului UML + cod
 TODO: la Crypto și KeyManger spune ca ele ajuta la schimbarea cheilor și cum se poate face (vezi doc. SVN + keychanger)
 
-Datorită faptului că nu este un atac probabil, limităm numărul de chei la două și nu lăsăm bootloader-ul să se ocupe de acest lucru.
-
-TODO: arhitectura bootloader-ului UML + cod
+TODO: Datorită faptului că nu este un atac probabil, limităm numărul de chei la două și nu lăsăm bootloader-ul să se ocupe de acest lucru.
+TODO: Bootloader & Bundler UG -> detalii tehnice despre schimbarea cheilor
 
 \section{Architectura și codul utilitarelor Flasher și Bundler}
 TODO: arhitectura flasher si bundler si cum share-uiesc ele codul (e reutilizabil!) UML + cod
