--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,16 @@
+@Misc{hexFormat,
+author = {ARM Group},
+title = {General: {I}ntel {H}ex {F}ile {F}ormat},
+note = {\url{http://www.keil.com/support/docs/1584/}, Accesat februarie 2017},
+}
+
+@Misc{srecExamples,
+author = {Peter Miller},
+title = {SRecord - {Binary} {F}iles},
+year = {2014},
+note = {\url{http://srecord.sourceforge.net/man/man1/srec_examples.html#BINARY%20FILES}, Accesat februarie 2017},
+}
+
 @Misc{ulinkConnections,
 author = {ARM Group},
 title = {u{L}ink 2 {U}ser's Guide - {T}arget {C}onnectors},
